infrastructure/lldap/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: lldap
      app.kubernetes.io/name: lldap
      app.kubernetes.io/component: lldap
  template:
    metadata:
      labels:
        app.kubernetes.io/component: lldap
    spec:
      enableServiceLinks: false
      serviceAccountName: default
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1010
        runAsGroup: 1010
        fsGroup: 1010
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: lldap
          image: lldap
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ ALL ]
          # https://github.com/lldap/lldap/blob/main/lldap_config.docker_template.toml
          ports:
            - name: ldap
              containerPort: 3890
            - name: web
              containerPort: 17170
          readinessProbe:
            exec:
              command: ["/app/lldap", "healthcheck"]
          volumeMounts:
            - name: data
              mountPath: /data
            - mountPath: /secret/crypto
              name: secret-crypto
            - mountPath: /secret/admin
              name: secret-admin
            - mountPath: /secret/db
              name: secret-db
      volumes:
        - name: data
          emptyDir: {}
        - name: secret-crypto
          secret:
            secretName: lldap-crypto
        - name: secret-admin
          secret:
            secretName: lldap-admin
        - name: secret-db
          secret:
            secretName: lldap-db-app
            items:
              - key: uri
                path: uri
