infrastructure/lldap/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
spec:
  selector:
    app.kubernetes.io/instance: lldap
    app.kubernetes.io/name: lldap
    app.kubernetes.io/component: lldap
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: web
    - name: ldap
      port: 389
      targetPort: ldap
