infrastructure/lldap/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap
spec:
  parentRefs:
    - name: traefik-intranet
      namespace: traefik
  hostnames:
    - lldap.int.fivebytestudios.com
  rules:
    - backendRefs:
        - name: lldap
          port: 80
