infrastructure/lldap/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  annotations:
    cert-manager.io/cluster-issuer: intranet-ca
spec:
  tls:
    - hosts:
        - "from rules"
      secretName: "lldap-tls"
  rules:
    - host: "lldap.int.fivebytestudios.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  name: http
