infrastructure/lldap/resources/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: lldap-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: lldap
      app.kubernetes.io/name: lldap
      app.kubernetes.io/component: lldap
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: authelia
              app.kubernetes.io/name: authelia
      ports:
        - protocol: TCP
          port: ldap
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: lldap
              app.kubernetes.io/name: lldap
              app.kubernetes.io/component: bootstrap
        # Requests from ingress controller
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
              app.kubernetes.io/instance: traefik
      ports:
        - protocol: TCP
          port: web
